--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
+    "node-sass": "^5.0.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
